HDA/Collections client-side refactoring for drill down view

--- a/static/style/src/less/base.less
+++ b/static/style/src/less/base.less
@@ -27,9 +27,6 @@
 @import "library.less";
 @import "toastr.less";
 
-// UI directory
-@import "ui/paired-collection-creator.less";
-
 
 // Mixins
 
@@ -1557,8 +1554,14 @@ div.permissionContainer {
 // ==== History styles ====
 @import "sprite-history-states.less";
 @import "sprite-history-buttons.less";
+
+@import "list-item.less";
 @import "history.less";
 @import "collections.less";
+
+@import "ui/paired-collection-creator.less";
+
+
 
 // ==== Tool menu styles 
 
