--- a/static/style/src/less/library.less
+++ b/static/style/src/less/library.less
@@ -151,6 +151,10 @@ pre.peek th {
     background: @table-heading-bg;
 }
 
+.help-button {
+    float: right;
+}
+
 span.expandLink {
     padding-left: 12px;
     display: inline-block;
