--- a/static/style/src/less/ui/paired-collection-creator.less
+++ b/static/style/src/less/ui/paired-collection-creator.less
@@ -142,11 +142,29 @@
         padding-bottom: 8px;
 
         .main-help {
-            max-height: 36px;
-            margin-bottom: 16px;
+            margin-bottom: 17px;
             overflow: hidden;
-            padding: 8px;
+            padding: 15px;
             background: #f8f8f8;
+
+            &:not(.expanded) {
+                // chosen to match alert - dependent on line height and .alert padding
+                max-height: 49px;
+                .help-content {
+                    p:first-child {
+                        overflow: hidden;
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                    }
+                    > *:not(:first-child) {
+                        display: none;
+                    }
+                }
+            }
+            &.expanded {
+                max-height: none;
+            }
+
             .help-content {
                 i {
                     cursor: help;
@@ -160,18 +178,13 @@
                     list-style: circle;
                     margin-left: 16px;
                 }
-                p:first-child {
-                    overflow: hidden;
-                    white-space: nowrap;
-                    text-overflow: ellipsis;
-                }
                 .less-help {
                     display: inline-block;
                     width: 100%;
                     text-align: right;
                 }
             }
-             .more-help {
+            .more-help {
                 //display: inline-block;
                 float: right;
             }
