--- a/static/style/src/less/base.less
+++ b/static/style/src/less/base.less
@@ -551,7 +551,8 @@ div.unified-panel-body {
     border: 1px solid rgb(95, 105, 144);
 }
 
-.peek-control td, th {
+.peek-control td,
+.peek-control th {
     padding: 4px 10px 4px 4px;
 }
 
@@ -1551,16 +1552,18 @@ div.permissionContainer {
     padding-left:5px;
 }
     
-// ==== History styles ====
+// ============================================================================ History
 @import "sprite-history-states.less";
 @import "sprite-history-buttons.less";
 
+@import "ui/icon-btn.less";
 @import "list-item.less";
 @import "history.less";
 @import "collections.less";
 
 @import "ui/paired-collection-creator.less";
 
+@import "ui/dataset-choice.less";
 
 
 // ==== Tool menu styles 
